fixes to collections (inline table) and album (text align fix)

--- a/styles/album.css
+++ b/styles/album.css
@@ -4,6 +4,7 @@ body.album {
     background-attachment: fixed;
     background-position: center center;
     background-size: cover;
+    padding-bottom: 200px;
 }
 
 .album-cover-art {
@@ -29,10 +30,6 @@ body.album {
     font-size: 1.5rem;
 }
 
-.album-view-details .album-view-release-info {
-    font-weight: 300;
-    font-size: 0.75rem;
-}
 
 .album-view-details .album-view-release-info {
     font-weight: 300;
@@ -65,9 +62,10 @@ body.album {
   width: 5%;
 }
 
-@media (max-width: 640px) and (min-width: 320px) {
+@media (max-width: 1920px) and (min-width: 320px) {
      .album-view-details {
          text-align: center;
+
      }
 
      .album-view-title {
@@ -76,7 +74,7 @@ body.album {
  }
 
 /* #3 */
-@media (max-width: 1024px) and (min-width: 320px) {
+@media (max-width: 1920px) and (min-width: 20rem) {
    .album-view-song-list {
         position: relative;
         top: 1rem;
