--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 *, *::before, *::after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
@@ -78,7 +78,7 @@ body {
 }
 
 /* Medium and small screens (640px) */
-@media (min-widt: 640px) {
+@media (min-widt: 40rem) {
   html { font-size: 112%; }
 
   .column {
@@ -100,8 +100,8 @@ body {
   html { font-size: 120%; }
 }
 
-.clearfix::before, .clearfix::after {
-
+.clearfix::before,
+.clearfix::after {
   content: " ";
   display: table;
 }
